--- a/backend/src/main/java/com/ecommerce/nuance/controller/README
+++ b/backend/src/main/java/com/ecommerce/nuance/controller/README
@@ -4,3 +4,6 @@ We have to create different methods specific to what will the web service calls 
 The logic will be written inside the implementation class.
 Controller class will have the method names the same as they are in the service class.
 @RequestMapping is used to give the specify the base URL path.
+The <> long with RequestMapping would tell that what data type would be returned.
+build() keyword is used to finalize the creation of ResponseEntity instance.
+We don't use the new keyword along with the return statement in the http request is because 
